# controllers/task.js
@@ -14,12 +14,11 @@ function getTasks(req, res) {
 }
 
 function createTask(req, res) {
-    const a = uuid.v1();
-    console.log(a);
     return Task.create({
         task_uuid: uuid.v1(),
         task_title: req.body.task_title,
         task_description: req.body.task_description || null,
+        desk_uuid: req.body.desk_uuid
     })
         .then((task) => res.status(201).send({ data: task }))
         .catch((error) => res.status(500).send(error));
